--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cli-table3": "^0.5.1",
     "inquirer": "^6.2.1",
+    "lodash": "^4.17.21",
     "mysql": "^2.16.0",
     "text-table": "^0.2.0"
   }
